--- a/requirements.txt
+++ b/requirements.txt
@@ -5,11 +5,16 @@ certifi==2026.1.4
 charset-normalizer==3.4.4
 click==8.3.1
 colorama==0.4.6
+distro==1.9.0
+dotenv==0.9.9
 faiss-cpu==1.13.2
 fastapi==0.128.0
 filelock==3.20.3
 fsspec==2026.1.0
+groq==1.0.0
 h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
 huggingface-hub==0.36.0
 idna==3.11
 Jinja2==3.1.6
@@ -21,6 +26,8 @@ numpy==2.4.1
 packaging==25.0
 pydantic==2.12.5
 pydantic_core==2.41.5
+python-dotenv==1.2.1
+python-multipart==0.0.21
 PyYAML==6.0.3
 regex==2026.1.15
 requests==2.32.5
@@ -29,6 +36,7 @@ scikit-learn==1.8.0
 scipy==1.17.0
 sentence-transformers==5.2.0
 setuptools==80.9.0
+sniffio==1.3.1
 starlette==0.50.0
 sympy==1.14.0
 threadpoolctl==3.6.0
