--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,17 @@
+# Python
 venv/
-.env
 __pycache__/
+*.pyc
+
+# Environment variables
+.env
+
+# IDE
+.vscode/
+.idea/
+
+# OS
+.DS_Store
+
+# Temporary files
+*.tmp
