--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,16 +13,14 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Login to Azure
-        uses: azure/login@v1
+      - name: Login to ACR
+        uses: docker/login-action@v3
         with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
-
-      - name: Login to Azure Container Registry
-        run: |
-          az acr login --name AIKnowledgeAssistantContainer
+          registry: ${{ secrets.ACR_LOGIN_SERVER }}
+          username: ${{ secrets.ACR_USERNAME }}
+          password: ${{ secrets.ACR_PASSWORD }}
 
       - name: Build and push Docker image
         run: |
-          docker build -t AIKnowledgeAssistantContainer.azurecr.io/knowledge-assistant:latest .
-          docker push AIKnowledgeAssistantContainer.azurecr.io/knowledge-assistant:latest
+          docker build -t ${{ secrets.ACR_LOGIN_SERVER }}/knowledge-assistant:latest .
+          docker push ${{ secrets.ACR_LOGIN_SERVER }}/knowledge-assistant:latest
