--- a/requirements.txt
+++ b/requirements.txt
@@ -1,50 +1,104 @@
+aiohappyeyeballs==2.6.1
+aiohttp==3.13.3
+aiosignal==1.4.0
 annotated-doc==0.0.4
 annotated-types==0.7.0
 anyio==4.12.1
+attrs==25.4.0
 certifi==2026.1.4
 charset-normalizer==3.4.4
 click==8.3.1
 colorama==0.4.6
+coloredlogs==15.0.1
+dataclasses-json==0.6.7
 distro==1.9.0
 dotenv==0.9.9
+et_xmlfile==2.0.0
 faiss-cpu==1.13.2
 fastapi==0.128.0
 filelock==3.20.3
+FlashRank==0.2.10
+flatbuffers==25.12.19
+frozenlist==1.8.0
 fsspec==2026.1.0
+greenlet==3.3.1
 groq==1.0.0
 h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
+httpx-sse==0.4.3
 huggingface-hub==0.36.0
+humanfriendly==10.0
 idna==3.11
 Jinja2==3.1.6
 joblib==1.5.3
+jsonpatch==1.33
+jsonpointer==3.0.0
+langchain==1.2.7
+langchain-classic==1.0.1
+langchain-community==0.4.1
+langchain-core==1.2.7
+langchain-huggingface==1.2.0
+langchain-text-splitters==1.1.0
+langgraph==1.0.7
+langgraph-checkpoint==4.0.0
+langgraph-prebuilt==1.0.7
+langgraph-sdk==0.3.3
+langsmith==0.6.4
+lxml==6.0.2
 MarkupSafe==3.0.3
+marshmallow==3.26.2
 mpmath==1.3.0
+multidict==6.7.0
+mypy_extensions==1.1.0
 networkx==3.6.1
 numpy==2.4.1
+onnxruntime==1.23.2
+openpyxl==3.1.5
+orjson==3.11.5
+ormsgpack==1.12.2
 packaging==25.0
+pandas==3.0.0
+pillow==12.1.0
+propcache==0.4.1
+protobuf==6.33.4
 pydantic==2.12.5
+pydantic-settings==2.12.0
 pydantic_core==2.41.5
+pypdf==6.6.0
+pyreadline3==3.5.4
+python-dateutil==2.9.0.post0
+python-docx==1.2.0
 python-dotenv==1.2.1
 python-multipart==0.0.21
 PyYAML==6.0.3
+rank-bm25==0.2.2
 regex==2026.1.15
 requests==2.32.5
+requests-toolbelt==1.0.0
 safetensors==0.7.0
 scikit-learn==1.8.0
 scipy==1.17.0
 sentence-transformers==5.2.0
 setuptools==80.9.0
+six==1.17.0
 sniffio==1.3.1
+SQLAlchemy==2.0.46
 starlette==0.50.0
 sympy==1.14.0
+tenacity==9.1.2
 threadpoolctl==3.6.0
 tokenizers==0.22.2
 torch==2.9.1
 tqdm==4.67.1
 transformers==4.57.5
+typing-inspect==0.9.0
 typing-inspection==0.4.2
 typing_extensions==4.15.0
+tzdata==2025.3
 urllib3==2.6.3
+uuid_utils==0.14.0
 uvicorn==0.40.0
+xxhash==3.6.0
+yarl==1.22.0
+zstandard==0.25.0
