--- a/requirements.txt
+++ b/requirements.txt
@@ -59,12 +59,15 @@ orjson==3.11.5
 ormsgpack==1.12.2
 packaging==25.0
 pandas==3.0.0
+pgvector==0.4.2
 pillow==12.1.0
 propcache==0.4.1
 protobuf==6.33.4
+psycopg2-binary==2.9.11
 pydantic==2.12.5
 pydantic-settings==2.12.0
 pydantic_core==2.41.5
+PyMuPDF==1.26.7
 pypdf==6.6.0
 pyreadline3==3.5.4
 python-dateutil==2.9.0.post0
