--- a/requirements.txt
+++ b/requirements.txt
@@ -14,10 +14,8 @@ dataclasses-json==0.6.7
 distro==1.9.0
 dotenv==0.9.9
 et_xmlfile==2.0.0
-faiss-cpu==1.13.2
 fastapi==0.128.0
 filelock==3.20.3
-FlashRank==0.2.10
 flatbuffers==25.12.19
 frozenlist==1.8.0
 fsspec==2026.1.0
@@ -36,7 +34,6 @@ jsonpatch==1.33
 jsonpointer==3.0.0
 langchain==1.2.7
 langchain-classic==1.0.1
-langchain-community==0.4.1
 langchain-core==1.2.7
 langchain-huggingface==1.2.0
 langchain-text-splitters==1.1.0
@@ -75,7 +72,6 @@ python-docx==1.2.0
 python-dotenv==1.2.1
 python-multipart==0.0.21
 PyYAML==6.0.3
-rank-bm25==0.2.2
 regex==2026.1.15
 requests==2.32.5
 requests-toolbelt==1.0.0
@@ -103,5 +99,6 @@ urllib3==2.6.3
 uuid_utils==0.14.0
 uvicorn==0.40.0
 xxhash==3.6.0
+xlrd==2.0.1
 yarl==1.22.0
 zstandard==0.25.0
