--- a/requirements.txt
+++ b/requirements.txt
@@ -65,6 +65,7 @@ psycopg2-binary==2.9.11
 pydantic==2.12.5
 pydantic-settings==2.12.0
 pydantic_core==2.41.5
+PyJWT==2.11.0
 PyMuPDF==1.26.7
 pypdf==6.6.0
 pyreadline3==3.5.4
